--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -148,6 +148,55 @@ WorldSettings.VR=True
 WorldSettings.Rendering=True
 WorldSettings.Audio=True
 WorldSettings.Tick=True
+FbxImportUI.Mesh=True
+FbxImportUI.Animation=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
+Launchpad_C.Tick=True
+Launchpad_C.Replication=True
+Launchpad_C.Rendering=True
+Launchpad_C.Collision=True
+Launchpad_C.Actor=True
+Launchpad_C.Input=True
+Launchpad_C.HLOD=True
+Launchpad_C.WorldPartition=True
+Launchpad_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -188,13 +237,23 @@ Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-StaticMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
+StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
+FbxImportUI="\"Object\" "
+PersonaPreviewSceneDescription="\"Object\" "
+AssetViewerSettings="\"Object\" "
+SkeletalMesh="\"Object\" "
+StreamableRenderAsset="\"Object\" "
+LODInfoUILayout="\"Object\" "
+PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
+PhysicsAsset="\"Object\" "
+PhysicsAssetGenerationSettings="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1110,7 +1169,219 @@ MRUItem0=/Game/ob_course_joint_ca
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Animations/Quinn
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.Locked=False
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.ActiveTypeFilters=
+ContentBrowserDrawer.EnabledTypeFilters=
+ContentBrowserDrawer.ActiveFrontendFilters=
+ContentBrowserDrawer.EnabledFrontendFilters=
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+FavoritePaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
+ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.Locked=False
+ContentBrowserTab1.FavoritesAreaExpanded=False
+ContentBrowserTab1.PathAreaExpanded=True
+ContentBrowserTab1.CollectionAreaExpanded=False
+ContentBrowserTab1.FavoritesSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.CollectionSearchAreaExpanded=False
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab1.ActiveTypeFilters=
+ContentBrowserTab1.EnabledTypeFilters=
+ContentBrowserTab1.ActiveFrontendFilters=
+ContentBrowserTab1.EnabledFrontendFilters=
+ContentBrowserTab1.PluginFilters=
+ContentBrowserTab1.Favorites.SelectedPaths=
+ContentBrowserTab1.SelectedCollections=
+ContentBrowserTab1.ExpandedCollections=
+ContentBrowserTab1.ThumbnailSize=2
+ContentBrowserTab1.CurrentViewType=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Launchpad.Launchpad;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=True
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+
+[DetailCategoriesAdvanced]
+FbxImportUI.Mesh=False
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=True
+bImportMaterials=True
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildReversedIndexBuffer=True
+bBuildNanite=False
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+DistanceFieldResolutionScale=1.000000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[MessageLog]
+LastLogListing=LoadErrors
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Blueprints/Launchpad
+MRUItem1=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
+MRUItem2=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor",Commands=)
+Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 
