--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -236,12 +236,12 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 FbxImportUI="\"Object\" "
