--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -197,6 +197,15 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
+Launchpad_2_C.Tick=True
+Launchpad_2_C.Replication=True
+Launchpad_2_C.Rendering=True
+Launchpad_2_C.Collision=True
+Launchpad_2_C.Actor=True
+Launchpad_2_C.Input=True
+Launchpad_2_C.HLOD=True
+Launchpad_2_C.WorldPartition=True
+Launchpad_2_C.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -236,12 +245,12 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Object="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 FbxImportUI="\"Object\" "
@@ -1222,6 +1231,7 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Launchpad_2.Launchpad_2;
 RecentlyPlaced=/Game/Blueprints/Launchpad.Launchpad;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 
@@ -1375,13 +1385,61 @@ bConvertSceneUnit=False
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Launchpad
-MRUItem1=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
-MRUItem2=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
+MRUItem0=/Game/Blueprints/Launchpad_2
+MRUItem1=/Game/Blueprints/Launchpad
+MRUItem2=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
+MRUItem3=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="PhysicsAssetEditor",Commands=)
 Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
+
+[AssetEditorToolkitTabLocation]
+/Game/Blueprints/Launchpad.Launchpad=1
+/Game/Blueprints/Launchpad_2.Launchpad_2=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
