--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -213,10 +213,106 @@ ob_course_joint_ca_C.Input=True
 ob_course_joint_ca_C.HLOD=True
 ob_course_joint_ca_C.WorldPartition=True
 ob_course_joint_ca_C.Events=True
+StaticMeshActor.Materials=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.TransformCommon=True
+Cone_Blueprint_C.TransformCommon=True
+Cone_Blueprint_C.StaticMesh=True
+Cone_Blueprint_C.Materials=True
+Cone_Blueprint_C.Physics=True
+Cone_Blueprint_C.Collision=True
+Cone_Blueprint_C.Lighting=True
+Cone_Blueprint_C.Rendering=True
+Cone_Blueprint_C.HLOD=True
+Cone_Blueprint_C.Navigation=True
+Cone_Blueprint_C.VirtualTexture=True
+Cone_Blueprint_C.Tags=True
+Cone_Blueprint_C.Cooking=True
+Cone_Blueprint_C.Replication=True
+Cone_Blueprint_C.WorldPartition=True
+Cone_Blueprint_C.Input=True
+Cone_Blueprint_C.Actor=True
+Cone_Blueprint_C.Tick=True
+Cone_Blueprint_C.Events=True
+Cone_Blueprint_C.ComponentTick=True
+Cone_Blueprint_C.ComponentReplication=True
+Cone_Blueprint_C.Variable=True
+TargetPoint.TransformCommon=True
+TargetPoint.Sprite=True
+TargetPoint.Physics=True
+TargetPoint.HLOD=True
+TargetPoint.Collision=True
+TargetPoint.Rendering=True
+TargetPoint.Lighting=True
+TargetPoint.Navigation=True
+TargetPoint.VirtualTexture=True
+TargetPoint.Tags=True
+TargetPoint.Activation=True
+TargetPoint.Cooking=True
+TargetPoint.ArrowComponent=True
+TargetPoint.Replication=True
+TargetPoint.WorldPartition=True
+TargetPoint.Input=True
+TargetPoint.Actor=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.WorldPartition=True
+StaticMeshActor.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.HLOD=True
+Actor.WorldPartition=True
+Actor.Input=True
+Actor.Actor=True
+Obstacle_Blueprint_C.TransformCommon=True
+Obstacle_Blueprint_C.Rendering=True
+Obstacle_Blueprint_C.Replication=True
+Obstacle_Blueprint_C.Collision=True
+Obstacle_Blueprint_C.HLOD=True
+Obstacle_Blueprint_C.WorldPartition=True
+Obstacle_Blueprint_C.Input=True
+Obstacle_Blueprint_C.Actor=True
+Obstacle_Blueprint_C.Tick=True
+Obstacle_Blueprint_C.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.WorldPartition=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ob_course_joint_ca.ob_course_joint_ca:PersistentLevel.ob_course_joint_ca
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -231,7 +327,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/ob_course_joint_ca.ob_course_joint_ca", ()))
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=156.000
+ScreenPosition=X=631.000 Y=295.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -254,8 +350,8 @@ Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+StaticMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -1176,6 +1272,14 @@ MovieSceneCapture.TimeStamp=2022.09.20-17.47.31
 MovieSceneCapture.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.09.20-17.47.23
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2022.09.20-17.47.45
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2022.09.20-17.47.37
+PinnedCommandList.LastCompileMethod=Unknown
+PhysicsAssetEditor.TimeStamp=2022.09.20-17.47.36
+PhysicsAssetEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.09.20-17.47.04
+BlueprintGraph.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1205,7 +1309,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1242,9 +1346,11 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [PlacementMode]
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Game/Obstacle_Blueprint.Obstacle_Blueprint;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Blueprints/Launchpad_2.Launchpad_2;
 RecentlyPlaced=/Game/Blueprints/Launchpad.Launchpad;
@@ -1283,6 +1389,7 @@ TimelineEnabledSnaps=MontageSection
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=False
+K2Node_VariableGet.Variable=False
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1399,10 +1506,12 @@ bConvertSceneUnit=False
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Launchpad_2
-MRUItem1=/Game/Blueprints/Launchpad
-MRUItem2=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
-MRUItem3=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
+MRUItem0=/Game/Obstacle_Blueprint
+MRUItem1=/Game/Cone_Blueprint
+MRUItem2=/Game/Blueprints/Launchpad_2
+MRUItem3=/Game/Blueprints/Launchpad
+MRUItem4=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
+MRUItem5=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -1413,6 +1522,7 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Launchpad.Launchpad=1
 /Game/Blueprints/Launchpad_2.Launchpad_2=1
+/Game/ob_course_joint_ca.ob_course_joint_ca:PersistentLevel.ob_course_joint_ca=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
