Added further obstacles to grey box

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -310,9 +310,21 @@ PlayerStart.HLOD=True
 PlayerStart.WorldPartition=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+blade_BP_C.Tick=True
+blade_BP_C.Replication=True
+blade_BP_C.Rendering=True
+blade_BP_C.Collision=True
+blade_BP_C.Actor=True
+blade_BP_C.Input=True
+blade_BP_C.HLOD=True
+blade_BP_C.WorldPartition=True
+blade_BP_C.Events=True
+blade_BP_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Obstacle_Blueprint.Obstacle_Blueprint
+OpenAssetsAtExit=/Game/blade_BP.blade_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1346,6 +1358,7 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/blade_BP.blade_BP;
 RecentlyPlaced=/Game/Obstacle_Blueprint.Obstacle_Blueprint;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -1506,12 +1519,13 @@ bConvertSceneUnit=False
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Obstacle_Blueprint
-MRUItem1=/Game/Cone_Blueprint
-MRUItem2=/Game/Blueprints/Launchpad_2
-MRUItem3=/Game/Blueprints/Launchpad
-MRUItem4=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
-MRUItem5=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
+MRUItem0=/Game/blade_BP
+MRUItem1=/Game/Obstacle_Blueprint
+MRUItem2=/Game/Cone_Blueprint
+MRUItem3=/Game/Blueprints/Launchpad_2
+MRUItem4=/Game/Blueprints/Launchpad
+MRUItem5=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
+MRUItem6=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
