--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -320,10 +320,20 @@ blade_BP_C.HLOD=True
 blade_BP_C.WorldPartition=True
 blade_BP_C.Events=True
 blade_BP_C.TransformCommon=True
+trip_bp_C.TransformCommon=True
+trip_bp_C.Rendering=True
+trip_bp_C.Replication=True
+trip_bp_C.Collision=True
+trip_bp_C.HLOD=True
+trip_bp_C.WorldPartition=True
+trip_bp_C.Input=True
+trip_bp_C.Actor=True
+trip_bp_C.Tick=True
+trip_bp_C.Events=True
+blade_BP_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Obstacle_Blueprint.Obstacle_Blueprint
 OpenAssetsAtExit=/Game/blade_BP.blade_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -1358,6 +1368,8 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/trip_bp.trip_bp;
 RecentlyPlaced=/Game/blade_BP.blade_BP;
 RecentlyPlaced=/Game/Obstacle_Blueprint.Obstacle_Blueprint;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
@@ -1403,6 +1415,7 @@ TimelineEnabledSnaps=MontageSection
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=False
 K2Node_VariableGet.Variable=False
+PropertyWrapper.Variable=False
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1520,12 +1533,13 @@ LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
 MRUItem0=/Game/blade_BP
-MRUItem1=/Game/Obstacle_Blueprint
-MRUItem2=/Game/Cone_Blueprint
-MRUItem3=/Game/Blueprints/Launchpad_2
-MRUItem4=/Game/Blueprints/Launchpad
-MRUItem5=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
-MRUItem6=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
+MRUItem1=/Game/trip_bp
+MRUItem2=/Game/Obstacle_Blueprint
+MRUItem3=/Game/Cone_Blueprint
+MRUItem4=/Game/Blueprints/Launchpad_2
+MRUItem5=/Game/Blueprints/Launchpad
+MRUItem6=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
+MRUItem7=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -1537,6 +1551,8 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Game/Blueprints/Launchpad.Launchpad=1
 /Game/Blueprints/Launchpad_2.Launchpad_2=1
 /Game/ob_course_joint_ca.ob_course_joint_ca:PersistentLevel.ob_course_joint_ca=1
+/Game/Obstacle_Blueprint.Obstacle_Blueprint=1
+/Game/blade_BP.blade_BP=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
