--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -180,7 +180,7 @@ Launchpad_C.Input=True
 Launchpad_C.HLOD=True
 Launchpad_C.WorldPartition=True
 Launchpad_C.Events=True
-StaticMeshComponent.Variable=True
+StaticMeshComponent.Variable=False
 StaticMeshComponent.TransformCommon=True
 StaticMeshComponent.Sockets=True
 StaticMeshComponent.StaticMesh=True
@@ -331,10 +331,37 @@ trip_bp_C.Actor=True
 trip_bp_C.Tick=True
 trip_bp_C.Events=True
 blade_BP_C.Default=True
+spin_bp_C.Tick=True
+spin_bp_C.Replication=True
+spin_bp_C.Rendering=True
+spin_bp_C.Collision=True
+spin_bp_C.Actor=True
+spin_bp_C.Input=True
+spin_bp_C.HLOD=True
+spin_bp_C.WorldPartition=True
+spin_bp_C.Events=True
+spin_bp_C.TransformCommon=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Cooking=True
+spin_bp_rev_C.Tick=True
+spin_bp_rev_C.Replication=True
+spin_bp_rev_C.Rendering=True
+spin_bp_rev_C.Collision=True
+spin_bp_rev_C.Actor=True
+spin_bp_rev_C.Input=True
+spin_bp_rev_C.HLOD=True
+spin_bp_rev_C.WorldPartition=True
+spin_bp_rev_C.Events=True
+spin_bp_rev_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/blade_BP.blade_BP
+OpenAssetsAtExit=/Game/spin_bp_rev.spin_bp_rev
+OpenAssetsAtExit=/Game/spin_bp.spin_bp
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -390,6 +417,8 @@ DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 PhysicsAsset="\"Object\" "
 PhysicsAssetGenerationSettings="\"Object\" "
 Actor="\"Object\" "
+RotatingMovementComponent="\"Object\" "
+MovementComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1368,6 +1397,9 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/spin_bp.spin_bp;
+RecentlyPlaced=/Game/spin_bp_rev.spin_bp_rev;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/trip_bp.trip_bp;
 RecentlyPlaced=/Game/blade_BP.blade_BP;
@@ -1375,7 +1407,6 @@ RecentlyPlaced=/Game/Obstacle_Blueprint.Obstacle_Blueprint;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Blueprints/Launchpad_2.Launchpad_2;
 RecentlyPlaced=/Game/Blueprints/Launchpad.Launchpad;
@@ -1529,17 +1560,19 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/blade_BP
-MRUItem1=/Game/trip_bp
-MRUItem2=/Game/Obstacle_Blueprint
-MRUItem3=/Game/Cone_Blueprint
-MRUItem4=/Game/Blueprints/Launchpad_2
-MRUItem5=/Game/Blueprints/Launchpad
-MRUItem6=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
-MRUItem7=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
+MRUItem0=/Game/spin_bp_rev
+MRUItem1=/Game/spin_bp
+MRUItem2=/Game/blade_BP
+MRUItem3=/Game/trip_bp
+MRUItem4=/Game/Obstacle_Blueprint
+MRUItem5=/Game/Cone_Blueprint
+MRUItem6=/Game/Blueprints/Launchpad_2
+MRUItem7=/Game/Blueprints/Launchpad
+MRUItem8=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
+MRUItem9=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -1553,6 +1586,8 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Game/ob_course_joint_ca.ob_course_joint_ca:PersistentLevel.ob_course_joint_ca=1
 /Game/Obstacle_Blueprint.Obstacle_Blueprint=1
 /Game/blade_BP.blade_BP=1
+/Game/trip_bp.trip_bp=1
+/Game/spin_bp.spin_bp=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
