--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -357,11 +357,53 @@ spin_bp_rev_C.HLOD=True
 spin_bp_rev_C.WorldPartition=True
 spin_bp_rev_C.Events=True
 spin_bp_rev_C.TransformCommon=True
+Launchpad_2_C.TransformCommon=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.HLOD=True
+TriggerBox.Physics=True
+TriggerBox.Rendering=True
+TriggerBox.Collision=True
+TriggerBox.Tags=True
+TriggerBox.Cooking=True
+TriggerBox.Replication=True
+TriggerBox.WorldPartition=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+BoxComponent.TransformCommon=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.HLOD=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Rendering=True
+BoxComponent.Tags=True
+BoxComponent.Cooking=True
+trip_bp_C.Default=True
+Door_BP_C.Tick=True
+Door_BP_C.Replication=True
+Door_BP_C.Rendering=True
+Door_BP_C.Collision=True
+Door_BP_C.Actor=True
+Door_BP_C.Input=True
+Door_BP_C.HLOD=True
+Door_BP_C.WorldPartition=True
+Door_BP_C.Events=True
+BoxComponent.Variable=True
+BoxComponent.Sockets=True
+BoxComponent.ComponentTick=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Events=True
+Door_BP_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/spin_bp_rev.spin_bp_rev
-OpenAssetsAtExit=/Game/spin_bp.spin_bp
+OpenAssetsAtExit=/Game/trip_bp.trip_bp
+OpenAssetsAtExit=/Game/ob_course_joint_ca.ob_course_joint_ca:PersistentLevel.ob_course_joint_ca
+OpenAssetsAtExit=/Game/blade_BP.blade_BP
+OpenAssetsAtExit=/Temp/Autosaves/Game/ob_course_joint_ca_Auto7.ob_course_joint_ca_Auto7:PersistentLevel.ob_course_joint_ca_Auto7
+OpenAssetsAtExit=/Temp/Autosaves/Game/ob_course_joint_ca_Auto9.ob_course_joint_ca_Auto9:PersistentLevel.ob_course_joint_ca_Auto9
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -419,6 +461,7 @@ PhysicsAssetGenerationSettings="\"Object\" "
 Actor="\"Object\" "
 RotatingMovementComponent="\"Object\" "
 MovementComponent="\"Object\" "
+BoxComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1397,17 +1440,18 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/Door_BP.Door_BP;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/spin_bp.spin_bp;
 RecentlyPlaced=/Game/spin_bp_rev.spin_bp_rev;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/trip_bp.trip_bp;
 RecentlyPlaced=/Game/blade_BP.blade_BP;
 RecentlyPlaced=/Game/Obstacle_Blueprint.Obstacle_Blueprint;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Blueprints/Launchpad_2.Launchpad_2;
 RecentlyPlaced=/Game/Blueprints/Launchpad.Launchpad;
 
@@ -1560,19 +1604,20 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/spin_bp_rev
-MRUItem1=/Game/spin_bp
-MRUItem2=/Game/blade_BP
-MRUItem3=/Game/trip_bp
-MRUItem4=/Game/Obstacle_Blueprint
-MRUItem5=/Game/Cone_Blueprint
-MRUItem6=/Game/Blueprints/Launchpad_2
-MRUItem7=/Game/Blueprints/Launchpad
-MRUItem8=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
-MRUItem9=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
+MRUItem0=/Game/blade_BP
+MRUItem1=/Game/Door_BP
+MRUItem2=/Game/trip_bp
+MRUItem3=/Game/Blueprints/Launchpad_2
+MRUItem4=/Game/spin_bp_rev
+MRUItem5=/Game/spin_bp
+MRUItem6=/Game/Obstacle_Blueprint
+MRUItem7=/Game/Cone_Blueprint
+MRUItem8=/Game/Blueprints/Launchpad
+MRUItem9=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
+MRUItem10=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -1588,6 +1633,7 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Game/blade_BP.blade_BP=1
 /Game/trip_bp.trip_bp=1
 /Game/spin_bp.spin_bp=1
+/Game/spin_bp_rev.spin_bp_rev=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
