--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -396,14 +396,106 @@ BoxComponent.ComponentTick=True
 BoxComponent.ComponentReplication=True
 BoxComponent.Events=True
 Door_BP_C.TransformCommon=True
+BP_Enemy_C.Character=True
+BP_Enemy_C.Tick=True
+BP_Enemy_C.Camera=True
+BP_Enemy_C.Pawn=True
+BP_Enemy_C.Replication=True
+BP_Enemy_C.Rendering=True
+BP_Enemy_C.Collision=True
+BP_Enemy_C.Actor=True
+BP_Enemy_C.Input=True
+BP_Enemy_C.HLOD=True
+BP_Enemy_C.WorldPartition=True
+BP_Enemy_C.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.AnimationRig=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Deformer=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+SkeletalMeshComponent.Materials=True
+PawnSensingComponent.Variable=True
+PawnSensingComponent.Sockets=True
+PawnSensingComponent.AI=True
+PawnSensingComponent.Tags=False
+PawnSensingComponent.ComponentTick=True
+PawnSensingComponent.ComponentReplication=True
+PawnSensingComponent.Cooking=True
+PawnSensingComponent.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+BP_Enemy_C.TransformCommon=True
+BP_Enemy_C.Mesh=True
+BP_Enemy_C.Shape=True
+BP_Enemy_C.Animation=True
+BP_Enemy_C.Clothing=True
+BP_Enemy_C.Physics=True
+BP_Enemy_C.MasterPoseComponent=True
+BP_Enemy_C.Lighting=True
+BP_Enemy_C.AnimationRig=True
+BP_Enemy_C.Deformer=True
+BP_Enemy_C.SkinWeights=True
+BP_Enemy_C.Navigation=True
+BP_Enemy_C.VirtualTexture=True
+BP_Enemy_C.Tags=True
+BP_Enemy_C.Activation=True
+BP_Enemy_C.Cooking=True
+BP_Enemy_C.Character Movement (General Settings)=True
+BP_Enemy_C.Character Movement: Walking=True
+BP_Enemy_C.Character Movement: Jumping / Falling=True
+BP_Enemy_C.Character Movement (Networking)=True
+BP_Enemy_C.Character Movement: Swimming=True
+BP_Enemy_C.Character Movement: Flying=True
+BP_Enemy_C.Character Movement: Custom Movement=True
+BP_Enemy_C.Character Movement (Rotation Settings)=True
+BP_Enemy_C.Character Movement: Physics Interaction=True
+BP_Enemy_C.Character Movement=True
+BP_Enemy_C.Character Movement: Avoidance=True
+BP_Enemy_C.RootMotion=True
+BP_Enemy_C.Character Movement: NavMesh Movement=True
+BP_Enemy_C.NavMovement=True
+BP_Enemy_C.Velocity=True
+BP_Enemy_C.PlanarMovement=True
+BP_Enemy_C.MovementComponent=True
+BP_Enemy_C.Materials=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.HLOD=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.WorldPartition=True
+NavMeshBoundsVolume.Actor=True
+K2Node_CallFunction.Graph=True
+Launchpad_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/trip_bp.trip_bp
 OpenAssetsAtExit=/Game/ob_course_joint_ca.ob_course_joint_ca:PersistentLevel.ob_course_joint_ca
 OpenAssetsAtExit=/Game/blade_BP.blade_BP
-OpenAssetsAtExit=/Temp/Autosaves/Game/ob_course_joint_ca_Auto7.ob_course_joint_ca_Auto7:PersistentLevel.ob_course_joint_ca_Auto7
-OpenAssetsAtExit=/Temp/Autosaves/Game/ob_course_joint_ca_Auto9.ob_course_joint_ca_Auto9:PersistentLevel.ob_course_joint_ca_Auto9
+OpenAssetsAtExit=/Game/Blueprints/BP_Enemy.BP_Enemy
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -462,6 +554,13 @@ Actor="\"Object\" "
 RotatingMovementComponent="\"Object\" "
 MovementComponent="\"Object\" "
 BoxComponent="\"Object\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+PawnSensingComponent="\"Object\" "
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BrushComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1403,7 +1502,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1440,6 +1539,8 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [PlacementMode]
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Game/Blueprints/BP_Enemy.BP_Enemy;
 RecentlyPlaced=/Game/Door_BP.Door_BP;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -1607,17 +1708,18 @@ bConvertSceneUnit=False
 LastLogListing=BlueprintLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/blade_BP
-MRUItem1=/Game/Door_BP
-MRUItem2=/Game/trip_bp
-MRUItem3=/Game/Blueprints/Launchpad_2
-MRUItem4=/Game/spin_bp_rev
-MRUItem5=/Game/spin_bp
-MRUItem6=/Game/Obstacle_Blueprint
-MRUItem7=/Game/Cone_Blueprint
-MRUItem8=/Game/Blueprints/Launchpad
-MRUItem9=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
-MRUItem10=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
+MRUItem0=/Game/Blueprints/BP_Enemy
+MRUItem1=/Game/blade_BP
+MRUItem2=/Game/Door_BP
+MRUItem3=/Game/trip_bp
+MRUItem4=/Game/Blueprints/Launchpad_2
+MRUItem5=/Game/spin_bp_rev
+MRUItem6=/Game/spin_bp
+MRUItem7=/Game/Obstacle_Blueprint
+MRUItem8=/Game/Cone_Blueprint
+MRUItem9=/Game/Blueprints/Launchpad
+MRUItem10=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
+MRUItem11=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -1634,6 +1736,8 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Game/trip_bp.trip_bp=1
 /Game/spin_bp.spin_bp=1
 /Game/spin_bp_rev.spin_bp_rev=1
+/Temp/Autosaves/Game/ob_course_joint_ca_Auto9.ob_course_joint_ca_Auto9:PersistentLevel.ob_course_joint_ca_Auto9=1
+/Temp/Autosaves/Game/ob_course_joint_ca_Auto7.ob_course_joint_ca_Auto7:PersistentLevel.ob_course_joint_ca_Auto7=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
