Enemy behavior adjusted

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -489,6 +489,21 @@ NavMeshBoundsVolume.WorldPartition=True
 NavMeshBoundsVolume.Actor=True
 K2Node_CallFunction.Graph=True
 Launchpad_C.TransformCommon=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+BP_Enemy_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1705,7 +1720,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/BP_Enemy
