--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -504,13 +504,33 @@ CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
 BP_Enemy_C.Default=True
+WorldPartitionMiniMap.TransformCommon=True
+WorldPartitionMiniMap.WorldPartitionMiniMap=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.HLOD=False
+TextRenderActor.Lighting=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.WorldPartition=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.HLOD=True
+TextRenderComponent.Navigation=True
+TextRenderComponent.Tags=True
+TextRenderComponent.Cooking=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/trip_bp.trip_bp
-OpenAssetsAtExit=/Game/ob_course_joint_ca.ob_course_joint_ca:PersistentLevel.ob_course_joint_ca
-OpenAssetsAtExit=/Game/blade_BP.blade_BP
-OpenAssetsAtExit=/Game/Blueprints/BP_Enemy.BP_Enemy
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -544,7 +564,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
 WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
-Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
@@ -576,6 +596,8 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
+BillboardComponent="\"Object\" "
+TextRenderComponent="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1554,11 +1576,12 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Blueprints/BP_Enemy.BP_Enemy;
 RecentlyPlaced=/Game/Door_BP.Door_BP;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/spin_bp.spin_bp;
 RecentlyPlaced=/Game/spin_bp_rev.spin_bp_rev;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1566,7 +1589,6 @@ RecentlyPlaced=/Game/trip_bp.trip_bp;
 RecentlyPlaced=/Game/blade_BP.blade_BP;
 RecentlyPlaced=/Game/Obstacle_Blueprint.Obstacle_Blueprint;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Launchpad_2.Launchpad_2;
 RecentlyPlaced=/Game/Blueprints/Launchpad.Launchpad;
@@ -1723,13 +1745,13 @@ bConvertSceneUnit=False
 LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Enemy
-MRUItem1=/Game/blade_BP
-MRUItem2=/Game/Door_BP
-MRUItem3=/Game/trip_bp
-MRUItem4=/Game/Blueprints/Launchpad_2
-MRUItem5=/Game/spin_bp_rev
-MRUItem6=/Game/spin_bp
+MRUItem0=/Game/blade_BP
+MRUItem1=/Game/Blueprints/BP_Enemy
+MRUItem2=/Game/spin_bp
+MRUItem3=/Game/Door_BP
+MRUItem4=/Game/trip_bp
+MRUItem5=/Game/Blueprints/Launchpad_2
+MRUItem6=/Game/spin_bp_rev
 MRUItem7=/Game/Obstacle_Blueprint
 MRUItem8=/Game/Cone_Blueprint
 MRUItem9=/Game/Blueprints/Launchpad
@@ -1753,6 +1775,7 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Game/spin_bp_rev.spin_bp_rev=1
 /Temp/Autosaves/Game/ob_course_joint_ca_Auto9.ob_course_joint_ca_Auto9:PersistentLevel.ob_course_joint_ca_Auto9=1
 /Temp/Autosaves/Game/ob_course_joint_ca_Auto7.ob_course_joint_ca_Auto7:PersistentLevel.ob_course_joint_ca_Auto7=1
+/Game/Blueprints/BP_Enemy.BP_Enemy=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
